# candle

./: .gitignore  Cargo.toml
.github/workflows/: coreml.yml
candle-coreml/: Cargo.toml  create_demo_model.py
candle-coreml/examples/: README.md
candle-coreml/examples/advanced/: embeddings.rs
candle-coreml/examples/basic/: bert_inference.rs  hello_coreml.rs
candle-coreml/examples/benchmarks/: bert_comparison.rs  overhead_analysis.rs  tensor_conversion.rs
candle-coreml/examples/tests/: model_validation.rs
candle-coreml/src/: lib.rs  model.rs
candle-coreml/tests/: integration_tests.rs
candle-examples/: Cargo.toml
candle-examples/examples/coreml/: README.md  main.rs
candle-examples/examples/flan-t5-coreml/: README.md  main.rs
